--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasatiempos</title>
 </head>
@@ -9,5 +10,12 @@
     <h1>Series</h1>
     <h2>Gatitos explosivos</h2>
     <p>Es una serie animada de comedia donde Dios y el Diablo son enviados a la Tierra en forma de gatos parlantes. Viven con una familia humana y causan caos mientras intentan cumplir su misión.</p>
+    <h2>La emperatriz divorciada</h2>
+    <p>Es una historia de fantasía y romance que sigue a Navier, una emperatriz traicionada por su esposo, quien busca un nuevo proposito y poder en su vida.</p>
+    <h2>Transformice</h2>
+    <p>El objetivo principal del juego es llegar a la meta antes que todos los demás ratones, mientras se evita obstáculos y se utilizan habilidades especiales para ganar ventaja.</p>
+    <h2>Caminar</h2>
+    <p>Salgo a caminar en mi tiempo libre.</p>
+    <img src="Raya.jpg" alt="">
 </body>
 </html>
