--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pasatiempos</title>
 </head>
 <body>
-    <h1>Series</h1>
+    <h1>Pasatiempos</h1>
     <h2>Gatitos explosivos</h2>
     <p>Es una serie animada de comedia donde Dios y el Diablo son enviados a la Tierra en forma de gatos parlantes. Viven con una familia humana y causan caos mientras intentan cumplir su misión.</p>
     <h2>La emperatriz divorciada</h2>
