--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p>El objetivo principal del juego es llegar a la meta antes que todos los demás ratones, mientras se evita obstáculos y se utilizan habilidades especiales para ganar ventaja.</p>
     <h2>Caminar</h2>
     <p>Salgo a caminar en mi tiempo libre.</p>
-    <img src="Raya.jpg" alt="">
+    <img src="gatos.jpg" alt="">
 </body>
 </html>
