--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasatiempos</title>
 </head>
@@ -17,4 +18,4 @@
     <p>Salgo a caminar en mi tiempo libre.</p>
     <img src="gatos.jpg" alt="">
 </body>
-</html>
+</html> 
